# ansible-config

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  ARCHITECTURE.md  CLAUDE.md  KERNEL_MIGRATION_GUIDE.md  LICENSE  README.md  ansible-navigator.yml  ansible.cfg  ci_vars.yml  ensure_wifi_unblocked.yml  init.sh  kernel_lts_migration.yml  main.py  playbook.yaml  pyproject.toml  requirements.txt  requirements.yml  site.yml  test-git-role.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  molecule.yml  tests.yml
command/: flatpak.sh  main.sh
command/lib/: README.md  colors.sh  log_info.sh  log_step.sh  log_success.sh  log_warn.sh  print_error.sh  print_header.sh  print_hr.sh  print_info.sh  print_list.sh  print_separator.sh  print_step.sh  print_success.sh  print_warn.sh
docs/: DISTROBOX_INSTALLATION.md  DNF_TIMEOUT_REMOVED.md  GENERIC_WORKSTATION_CONFIG.md  GHOSTTY_INSTALLATION.md  INTEL_FIRMWARE_SETUP.md  MIGRATION.md  SSH_FLATPAK_FIX.md  reuse_role.rst  spacelift_ansible.md
extensions/molecule/: README.md  config.yml  inventory.yml  requirements.yml
inventory/group_vars/: all.yml
issue/: log
molecule/: config.yml  requirements.yml
molecule/ci/: cleanup.yml  converge.yml  inventory.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/: cleanup.yml  converge.yml  inventory.yml  molecule.yml  prepare.yml  verify.yml
molecule/podman-docker/: README.md  cleanup.yml  converge.yml  create.yml  destroy.yml  molecule.yml  requirements.yml  verify.yml
personal/: distraction.md
(+310 files in other folders)
